2007-10-03  Rob Buis  <buis@kde.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=15260
        Any styles defined after <element> {<property>:%} style are ignored by Safari
    
        Add dummy rule to skip constructions like width: %.

        * css/CSSGrammar.y:

2007-10-03  Mark Rowe  <mrowe@apple.com>

        Reviewed by Lars.

        Get Gtk+ port building on the feature branch.

        * WebCore.pro:
        * ksvg2/svg/SVGSVGElement.cpp:
        * platform/graphics/svg/cairo/RenderPathCairo.cpp:
        (WebCore::RenderPath::strokeContains):
        * platform/graphics/svg/cairo/SVGPaintServerCairo.cpp:
        (WebCore::SVGPaintServer::draw):
        (WebCore::SVGPaintServer::renderPath):
        * platform/graphics/svg/cairo/SVGPaintServerSolidCairo.cpp:
        (WebCore::SVGPaintServerSolid::setup):
        * platform/graphics/svg/cairo/SVGResourceMaskerCairo.cpp:
        (WebCore::SVGResourceMasker::applyMask):
        * rendering/SVGCharacterLayoutInfo.cpp:
        * rendering/SVGInlineTextBox.cpp:
        * rendering/SVGRootInlineBox.cpp:

2007-10-02  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=15102
        XMLHttpRequests should dispatch a readystatechange event.

        Test: http/tests/xmlhttprequest/readystatechange.html

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::callReadyStateChangeListener): Added readystatechange
        event support. Fixed the function to dispatch the same event to all listeners
        instead of creating a new copy for each one. Changed bubbling/cancelability of
        load and readystatechange events to match Firefox.

2007-10-02  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver Hunt.

        http://bugs.webkit.org/show_bug.cgi?id=13828
        Fixes svg/custom/rootmost-svg-xy-attrs.xhtml

        * WebCore.xcodeproj/project.pbxproj: fix warning about SVGDOM.h